# wasm-tetris

./: .gitignore  Cargo.toml  README.md
pkg/: package.json  tetris.d.ts  tetris.js  tetris_bg.js  tetris_bg.wasm  tetris_bg.wasm.d.ts
src/: lib.rs  shape.rs  tetris.rs
www/: index.html  index.js  netlify.toml  package-lock.json  package.json
